kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__schema_stmt_recovery_16.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"schema A:\na!!: int \"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: "",
    name: "",
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: "",
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [],
                    body: [],
                    decorators: [],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 2,
            end_column: 0,
        },
        Node {
            node: Expr(
                ExprStmt {
                    exprs: [
                        Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "a",
                                            filename: "",
                                            line: 2,
                                            column: 0,
                                            end_line: 2,
                                            end_column: 1,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 2,
                            column: 0,
                            end_line: 2,
                            end_column: 1,
                        },
                    ],
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 2,
            end_column: 1,
        },
        Node {
            node: Expr(
                ExprStmt {
                    exprs: [
                        Node {
                            node: Unary(
                                UnaryExpr {
                                    op: Not,
                                    operand: Node {
                                        node: Missing(
                                            MissingExpr,
                                        ),
                                        filename: "",
                                        line: 2,
                                        column: 2,
                                        end_line: 2,
                                        end_column: 3,
                                    },
                                },
                            ),
                            filename: "",
                            line: 2,
                            column: 1,
                            end_line: 2,
                            end_column: 2,
                        },
                    ],
                },
            ),
            filename: "",
            line: 2,
            column: 1,
            end_line: 2,
            end_column: 2,
        },
        Node {
            node: Expr(
                ExprStmt {
                    exprs: [
                        Node {
                            node: Unary(
                                UnaryExpr {
                                    op: Not,
                                    operand: Node {
                                        node: Missing(
                                            MissingExpr,
                                        ),
                                        filename: "",
                                        line: 2,
                                        column: 3,
                                        end_line: 2,
                                        end_column: 4,
                                    },
                                },
                            ),
                            filename: "",
                            line: 2,
                            column: 2,
                            end_line: 2,
                            end_column: 3,
                        },
                    ],
                },
            ),
            filename: "",
            line: 2,
            column: 2,
            end_line: 2,
            end_column: 3,
        },
        Node {
            node: Expr(
                ExprStmt {
                    exprs: [
                        Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "int",
                                            filename: "",
                                            line: 2,
                                            column: 5,
                                            end_line: 2,
                                            end_column: 8,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 2,
                            column: 5,
                            end_line: 2,
                            end_column: 8,
                        },
                    ],
                },
            ),
            filename: "",
            line: 2,
            column: 5,
            end_line: 2,
            end_column: 8,
        },
    ],
    comments: [],
}

