kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__schema_stmt_recovery_21.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 216
expression: "crate::tests::parsing_module_string(r#\"@deprecated(\nschema A:\n    a: \"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: "",
    name: "",
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: "",
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 2,
                        column: 7,
                        end_line: 2,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [],
                    body: [
                        Node {
                            node: SchemaAttr(
                                SchemaAttr {
                                    doc: "",
                                    name: Node {
                                        node: "a",
                                        filename: "",
                                        line: 3,
                                        column: 4,
                                        end_line: 3,
                                        end_column: 5,
                                    },
                                    type_str: Node {
                                        node: "any",
                                        filename: "",
                                        line: 3,
                                        column: 7,
                                        end_line: 3,
                                        end_column: 6,
                                    },
                                    op: None,
                                    value: None,
                                    is_optional: false,
                                    decorators: [],
                                    ty: Node {
                                        node: Any,
                                        filename: "",
                                        line: 3,
                                        column: 7,
                                        end_line: 3,
                                        end_column: 6,
                                    },
                                },
                            ),
                            filename: "",
                            line: 3,
                            column: 4,
                            end_line: 3,
                            end_column: 6,
                        },
                    ],
                    decorators: [
                        Node {
                            node: CallExpr {
                                func: Node {
                                    node: Identifier(
                                        Identifier {
                                            names: [
                                                "deprecated",
                                            ],
                                            pkgpath: "",
                                            ctx: Load,
                                        },
                                    ),
                                    filename: "",
                                    line: 1,
                                    column: 1,
                                    end_line: 1,
                                    end_column: 11,
                                },
                                args: [
                                    Node {
                                        node: Missing(
                                            MissingExpr,
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 11,
                                        end_line: 2,
                                        end_column: 0,
                                    },
                                ],
                                keywords: [],
                            },
                            filename: "",
                            line: 1,
                            column: 1,
                            end_line: 1,
                            end_column: 12,
                        },
                    ],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 3,
            end_column: 7,
        },
    ],
    comments: [],
}

